2008-02-27  Glenn Morris  <rgm@gnu.org>

	* nnmairix.el: Change defcustom :version from 23.0 to 23.1.
	(nnmairix-group-regexp, nnmairix-valid-backends): Convert from free
	variables to defconsts.  Convert comments to doc-strings.
	(nnmairix-last-server, nnmairix-current-server): Convert from free
	variables to defvars.  Convert comments to doc-strings.
	(gnus-registry-fetch-group): Autoload.
	(nnmairix-replace-group-and-numbers): Use mapc rather than mapcar.
	(nnmairix-widget-get-values, nnmairix-widget-make-query-from-widgets)
	(nnmairix-widget-build-editable-fields): Use car cddr rather than caddr.
	(nnmairix-request-group): Bind nnmairix-fast and nnmairix-group around
	nnmairix-request-group-with-article-number-correction call.
	(nnmairix-fast, nnmairix-group): New, less general names, for free
	variables passed from nnmairix-request-group to
	nnmairix-request-group-with-article-number-correction.  Declare.
	(nnmairix-request-group-with-article-number-correction):
	Use nnmairix-fast, nnmairix-group rather than fast, group.

2008-02-26  David Engster  <dengste@eml.cc>

	* nnmairix.el: New file.  Mairix back end for Gnus.  Initial import of
	version 0.5.

2008-02-26  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-register-message-ids): Use `id'
	instead of making an extra function call.  Don't add the current group
	to articles only when they have the group.  Use
	`gnus-registry-fetch-groups' instead of `gnus-registry-fetch-group'.
	Reported by David <de_bb@arcor.de>.

2008-02-24  Miles Bader  <miles@gnu.org>

	* mm-util.el (mm-hack-charsets, mm-iso-8859-15-compatible)
	(mm-iso-8859-x-to-15-table, mm-iso-8859-x-to-15-region)
	(mm-find-mime-charset-region):
	* mm-bodies.el (mm-encode-body):
	* mml.el (mml-parse-1): Revert removal of `mm-hack-charsets'.

2008-02-16  Reiner Steib  <Reiner.Steib@gmx.de>

	* mail-source.el (mail-source-delete-incoming): Change default.
	Supplement doc string.
